<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".presentation.PaidFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/bt_back"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/hotel_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/ORDER_IS_PAID"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="122dp"
        android:src="@drawable/congratulations_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/ORDER_TO_WORK"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/order_confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        tools:text="@string/ORDER_IN_WORK_DESC"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:gravity="center"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_super"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rect_rounded_button_shape"
        android:layout_gravity="bottom"
        android:layout_marginBottom="28dp"
        android:text="@string/SUPER"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
    </FrameLayout>

</LinearLayout>