<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/number_of_tourist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/FIRST_TOURIST"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_hide_show"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_blue_arrow_hide"
                android:padding="9dp"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/tourist_input_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/tourist_block_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NAME"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FIRST_NAME"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DATE_OF_BIRTH"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="datetime|date" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CITIZENSHIP"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PASSPORT_NUMBER"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="number|numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/VALIDITY_OF_PASSPORT"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="datetime|date" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>