<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_gray"
        tools:context=".presentation.BookingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/bt_back"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:id="@+id/booking_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/BOOKING"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <include
            android:id="@+id/hotel_info"
            layout="@layout/elem_hotel_data" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_departure_from"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/DEPARTURE_FROM"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/departure_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="Санкт-Петербург" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_country_city"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/COUNTRY_CITY"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/country_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="Египет, Хургада" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_dates"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/DATES"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="19.09.2023 – 27.09.2023" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_count_of_nights"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/COUNT_OF_NIGHT"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/count_of_nights"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="7 ночей" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_hotel_name"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/HOTEL"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/hotel_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="Steigenberger Makadi" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_room"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ROOM"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="Стандартный с видом на бассейн или сад" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_food"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/FOOD"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/food"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="Все включено" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/INFO_ABOUT_CUSTOMER"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PHONE_NUMBER"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="phone" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mail_edit_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/EMAIL"
                    android:textColorHint="@color/gray"
                    app:hintTextColor="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mail_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_rounded_edit_text_shape"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/DATA_PROTECT_INFO"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/tourist_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.effectivemobiletest.presentation.views.TouristInfoView
                android:id="@+id/tourist_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/number_of_tourist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/ADD_TOURIST"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_add_tourist"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/rect_rounded_button_hide_shape"
                    android:backgroundTint="@color/bright_blue"
                    android:drawableLeft="@drawable/ic_plus"
                    android:padding="4dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_tour_cost"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/FOOD"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tour_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="186 600 ₽" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_fuel_cost"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/FUEL_CHARGE"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/fuel_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="9 300 ₽" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_service_cost"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SERVICE_CHARGE"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/service_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="2 136 ₽" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_to_be_paid"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:text="@string/FOR_PAYMENT"
                        android:textColor="@color/gray"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/to_be_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="198 036 ₽" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_pay"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/rect_rounded_button_shape"
            android:text="@string/TO_PAY"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>